--- a/client/components/PubHistoryViewer/pubHistoryViewer.scss
+++ b/client/components/PubHistoryViewer/pubHistoryViewer.scss
@@ -68,7 +68,7 @@
 
     ul.bp3-menu {
         position: relative;
-        overflow: scroll;
+        overflow: auto;
         border-radius: 4px;
         background: darken(white, 4%);
         border: 4px solid darken(white, 4%);
